--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
     min-height: -moz-available;
     min-height: -webkit-fill-available;
     font-family: "Comic Sans MS", "Comic Sans";
-    padding: 0 2rem;
+    padding: 0 2rem 2rem 2rem;
     transition: all var(--theme-delay);
 }
 #header {
@@ -213,6 +213,13 @@ body {
     width: 0;
 }
 
+.result-preview {
+    margin-top: 1.5rem;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+}
+
 /* Popup */
 .popup {
     --popup-succ-color: #1fb9c0;
@@ -229,9 +236,7 @@ body {
     opacity: 0;
     bottom: 15%;
     left: 50%;
-    transition:
-        opacity 0.4s,
-        transform 0.55s cubic-bezier(0.54, 1.5, 0.38, 1.025);
+    transition: opacity 0.4s, transform 0.55s cubic-bezier(0.54, 1.5, 0.38, 1.025);
     transform: translate(-50%, 80%) scaleX(0);
     cursor: pointer;
     min-width: 150px;
